feat: GET /clothes/:id API and swagger document update
